--- a/public/kingdom-L4.css
+++ b/public/kingdom-L4.css
@@ -2553,6 +2553,7 @@ select {
 
 select {
   height: 1.6875rem;
+  vertical-align: top;
 }
 
 .visualize-vertical-rhythm {
