--- a/src/_L3-rhythm.scss
+++ b/src/_L3-rhythm.scss
@@ -42,7 +42,8 @@ input, button, select {
 }
 
 select {
-  height: $vertical-rhythm-base; // TODO: Setting height on select fixes size, but only when the select is surrounded by <hr>, it also seems to be connected to font-family...
+  height: $vertical-rhythm-base;
+  vertical-align: top;
 }
 
 .visualize-vertical-rhythm {
